==> captain58/embed_platform/platform/mcu/stm32l431/hal/src/hal_hwtimer.c <==
#define EXT_HAL_HWTIMER
#include "sys.h"
#include "hal.h"
#define CLK_HAL_HWTIMER                (SystemCoreClock)

static uint8 Hal_Timer_Config(uint8 tmrIdx)
{
//	    ETIM_InitTypeDef init_para;
//	    ETIMx_Type* ETIMx;
//      volatile uint08 EtimNum;
//  
//      EtimNum = ((uint32_t)ETIMx - ETIMER1_BASE)>>5;
	timer_oc_parameter_struct timer_ocintpara;
	timer_parameter_struct timer_initpara;
	timer_break_parameter_struct timer_breakpara;
    timer_ic_parameter_struct timer_icinitpara;
	
    uint32 cycle;
    SYS_VAR_CHECK(tmrIdx >= 3);           //判断参数的正确性
    cycle = gul_HwTimerDelay[tmrIdx];    //获取延时间隔
    SYS_VAR_CHECK(cycle > 1000);           //判断参数的正确性

    //信号源参数
//	    init_para.sig_src_para.SIG1SEL = ETIMx_ETxINSEL_SIG1SEL_GROUP1;     /* 内部信号1源选择GROUP1 */
    
    switch(tmrIdx)
    {
        case 0:
            {
              
                 /* -----------------------------------------------------------------------
                TIMER0 configuration:
                generate 3 complementary PWM signal.
                TIMER0CLK is fixed to systemcoreclock, the TIMER0 prescaler is equal to 119 
                so the TIMER0 counter clock used is 1MHz.
                insert a dead time equal to 200/systemcoreclock =1.67us 
                configure the break feature, active at low level, and using the automatic
                output enable feature.
                use the locking parameters level 0.
                ----------------------------------------------------------------------- */


				rcu_periph_clock_enable(RCU_TIMER0);
				
				timer_deinit(TIMER0);
				
				/* TIMER0 configuration */
				timer_initpara.prescaler		 = 119;
				timer_initpara.alignedmode		 = TIMER_COUNTER_EDGE;
				timer_initpara.counterdirection  = TIMER_COUNTER_UP;
				timer_initpara.period			 = cycle * 400 -1;//399;
				timer_initpara.clockdivision	 = TIMER_CKDIV_DIV1;
				timer_initpara.repetitioncounter = 0;
				timer_init(TIMER0,&timer_initpara);
				
				 /* CH0/CH0N,CH1/CH1N and CH2/CH2N configuration in timing mode */
//					timer_ocintpara.outputstate  = TIMER_CCX_ENABLE;
//					timer_ocintpara.outputnstate = TIMER_CCXN_ENABLE;
//					timer_ocintpara.ocpolarity	 = TIMER_OC_POLARITY_HIGH;
//					timer_ocintpara.ocnpolarity  = TIMER_OCN_POLARITY_HIGH;
//					timer_ocintpara.ocidlestate  = TIMER_OC_IDLE_STATE_HIGH;
//					timer_ocintpara.ocnidlestate = TIMER_OCN_IDLE_STATE_HIGH;
//					
//					timer_channel_output_config(TIMER0,TIMER_CH_0,&timer_ocintpara);
//					timer_channel_output_config(TIMER0,TIMER_CH_1,&timer_ocintpara);
//					timer_channel_output_config(TIMER0,TIMER_CH_2,&timer_ocintpara);
				
//					timer_channel_output_pulse_value_config(TIMER0,TIMER_CH_0,299);
//					timer_channel_output_mode_config(TIMER0,TIMER_CH_0,TIMER_OC_MODE_TIMING);
//					timer_channel_output_shadow_config(TIMER0,TIMER_CH_0,TIMER_OC_SHADOW_ENABLE);
//					
//					timer_channel_output_pulse_value_config(TIMER0,TIMER_CH_1,299);
//					timer_channel_output_mode_config(TIMER0,TIMER_CH_1,TIMER_OC_MODE_TIMING);
//					timer_channel_output_shadow_config(TIMER0,TIMER_CH_1,TIMER_OC_SHADOW_ENABLE);
//					
//					timer_channel_output_pulse_value_config(TIMER0,TIMER_CH_2,299);
//					timer_channel_output_mode_config(TIMER0,TIMER_CH_2,TIMER_OC_MODE_TIMING);
//					timer_channel_output_shadow_config(TIMER0,TIMER_CH_2,TIMER_OC_SHADOW_ENABLE);
//					
//					
//					/* automatic output enable, break, dead time and lock configuration*/
//					timer_breakpara.runoffstate 	 = TIMER_ROS_STATE_ENABLE;
//					timer_breakpara.ideloffstate	 = TIMER_IOS_STATE_ENABLE ;
//					timer_breakpara.deadtime		 = 164;
//					timer_breakpara.breakpolarity	 = TIMER_BREAK_POLARITY_LOW;
//					timer_breakpara.outputautostate  = TIMER_OUTAUTO_ENABLE;
//					timer_breakpara.protectmode 	 = TIMER_CCHP_PROT_OFF;
//					timer_breakpara.breakstate		 = TIMER_BREAK_DISABLE;
//					timer_break_config(TIMER0,&timer_breakpara);

				/* TIMER1 CH0 input capture configuration */
//					timer_icinitpara.icpolarity  = TIMER_IC_POLARITY_RISING;
//					timer_icinitpara.icselection = TIMER_IC_SELECTION_DIRECTTI;
//					timer_icinitpara.icprescaler = TIMER_IC_PSC_DIV1;
//					timer_icinitpara.icfilter	 = 0x02;
//					timer_input_capture_config(TIMER0,TIMER_CH_0,&timer_icinitpara);


				/* TIMER0 primary output function enable */
//					timer_primary_output_config(TIMER0,ENABLE);
				    /* auto-reload preload enable */
    			timer_auto_reload_shadow_enable(TIMER0);
				timer_slave_mode_select(TIMER0,TIMER_SLAVE_MODE_EVENT);
				/* TIMER0 channel control update interrupt enable */
//					timer_interrupt_enable(TIMER0,TIMER_INT_CH0);
//					timer_interrupt_enable(TIMER0,TIMER_INT_CMT);
				/* TIMER0 break interrupt disable */
//					timer_interrupt_disable(TIMER0,TIMER_INT_BRK);
				
				/* TIMER0 counter enable */
//					timer_enable(TIMER0);

            }
            break;
        case 1:
            {
                //信号源参数
                rcu_periph_clock_enable(RCU_TIMER1);

                timer_deinit(TIMER1);

                /* TIMER0 configuration */
                timer_initpara.prescaler         = 119;
                timer_initpara.alignedmode       = TIMER_COUNTER_EDGE;
                timer_initpara.counterdirection  = TIMER_COUNTER_UP;
                timer_initpara.period            = cycle * 400 -1;//399;
                timer_initpara.clockdivision     = TIMER_CKDIV_DIV1;
                timer_initpara.repetitioncounter = 0;
                timer_init(TIMER1,&timer_initpara);
//	
//	                 /* CH0/CH0N,CH1/CH1N and CH2/CH2N configuration in timing mode */
//	                timer_ocintpara.outputstate  = TIMER_CCX_ENABLE;
//	                timer_ocintpara.outputnstate = TIMER_CCXN_ENABLE;
//	                timer_ocintpara.ocpolarity   = TIMER_OC_POLARITY_HIGH;
//	                timer_ocintpara.ocnpolarity  = TIMER_OCN_POLARITY_HIGH;
//	                timer_ocintpara.ocidlestate  = TIMER_OC_IDLE_STATE_HIGH;
//	                timer_ocintpara.ocnidlestate = TIMER_OCN_IDLE_STATE_HIGH;
//	
//	                timer_channel_output_config(TIMER1,TIMER_CH_0,&timer_ocintpara);
//	                timer_channel_output_config(TIMER1,TIMER_CH_1,&timer_ocintpara);
//	                timer_channel_output_config(TIMER1,TIMER_CH_2,&timer_ocintpara);
//	
//	                timer_channel_output_pulse_value_config(TIMER1,TIMER_CH_0,299);
//	                timer_channel_output_mode_config(TIMER1,TIMER_CH_0,TIMER_OC_MODE_TIMING);
//	                timer_channel_output_shadow_config(TIMER1,TIMER_CH_0,TIMER_OC_SHADOW_ENABLE);
//	
//	                timer_channel_output_pulse_value_config(TIMER1,TIMER_CH_1,299);
//	                timer_channel_output_mode_config(TIMER1,TIMER_CH_1,TIMER_OC_MODE_TIMING);
//	                timer_channel_output_shadow_config(TIMER1,TIMER_CH_1,TIMER_OC_SHADOW_ENABLE);
//	
//	                timer_channel_output_pulse_value_config(TIMER1,TIMER_CH_2,299);
//	                timer_channel_output_mode_config(TIMER1,TIMER_CH_2,TIMER_OC_MODE_TIMING);
//	                timer_channel_output_shadow_config(TIMER1,TIMER_CH_2,TIMER_OC_SHADOW_ENABLE);
//	
//	
//	                /* automatic output enable, break, dead time and lock configuration*/
//	                timer_breakpara.runoffstate      = TIMER_ROS_STATE_ENABLE;
//	                timer_breakpara.ideloffstate     = TIMER_IOS_STATE_ENABLE ;
//	                timer_breakpara.deadtime         = 164;
//	                timer_breakpara.breakpolarity    = TIMER_BREAK_POLARITY_LOW;
//	                timer_breakpara.outputautostate  = TIMER_OUTAUTO_ENABLE;
//	                timer_breakpara.protectmode      = TIMER_CCHP_PROT_OFF;
//	                timer_breakpara.breakstate       = TIMER_BREAK_DISABLE;
//	                timer_break_config(TIMER1,&timer_breakpara);
//	                
//	                /* TIMER0 primary output function enable */
//	                timer_primary_output_config(TIMER1,ENABLE);
    			timer_auto_reload_shadow_enable(TIMER1);
				timer_slave_mode_select(TIMER1,TIMER_SLAVE_MODE_EVENT);

            }
            break;

       
        
        default:
            break;
    }

    SYS_OK();
}

uint8 SysTimer_DlyStart(uint8 tmrIdx)
{

    switch(tmrIdx)
    {
    case 0:
        //信号源参数
//        /* TIMER0 channel control update interrupt enable */
//        timer_interrupt_enable(TIMER0,TIMER_INT_CMT);
//        /* TIMER0 break interrupt disable */
//        timer_interrupt_enable(TIMER0,TIMER_INT_BRK);
//
//        /* TIMER0 counter enable */
//        timer_enable(TIMER0);
//#ifndef GD32F30X_HD
//		nvic_irq_enable(TIMER0_TRG_CMT_TIMER10_IRQn, 2, 1);
//#else
//		nvic_irq_enable(TIMER0_TRG_CMT_IRQn, 0, 1);
//#endif

		timer_interrupt_enable(TIMER0,TIMER_INT_CH0);
		timer_enable(TIMER0);

		nvic_irq_enable(TIMER0_Channel_IRQn, 0, 1);

        break;
    case 1:
        //信号源参数
		/* TIMER1 channel control update interrupt enable */
		timer_interrupt_enable(TIMER1,TIMER_INT_CH0);
		/* TIMER1 break interrupt disable */
//			timer_interrupt_disable(TIMER1,TIMER_INT_BRK);

		/* TIMER1 counter enable */
		timer_enable(TIMER1);
		nvic_irq_enable(TIMER1_IRQn, 0, 1);


        break;        
    default:
   
        break;
    }
	
	SYS_OK();  
}

uint8 SysTimer_DlyStop(uint8 tmrIdx)
{
    SYS_VAR_CHECK(tmrIdx >= 4);           //判断参数的正确性
    switch(tmrIdx)                      //根据号码进行散转
    {
        case 0:                         //关闭中断功能
            /* TIMER0 channel control update interrupt enable */
//	            timer_interrupt_disable(TIMER0,TIMER_INT_CMT);
            /* TIMER0 break interrupt disable */
            timer_interrupt_disable(TIMER0,TIMER_INT_CH0);

            /* TIMER0 counter enable */
            timer_disable(TIMER0);
			nvic_irq_disable(TIMER0_Channel_IRQn);

            break;
        case 1:                         //关闭中断功能
			/* TIMER0 channel control update interrupt enable */
			timer_interrupt_disable(TIMER1,TIMER_INT_CMT);
			/* TIMER0 break interrupt disable */
			timer_interrupt_disable(TIMER1,TIMER_INT_BRK);

			/* TIMER0 counter enable */
			timer_disable(TIMER1);

			nvic_irq_disable(TIMER1_IRQn);

            break;

        default:
            return SYS_ERR_FT;
//	            Chip_TIMER_MatchDisableInt(LPC_HWTIMER, 3);
//	            Chip_TIMER_StopOnMatchDisable(LPC_HWTIMER, 3);
            break;
    }
    SYS_OK();                            //返回停止成功
}

bool SysTimer_GetStatus(uint8 tmrIdx)
{
    SYS_VAR_CHECK(tmrIdx >= 4);              //判断参数的正确性
//	    ETIMx_Type* ETIMx;
    uint8_t stt = 0;
    switch(tmrIdx)
    {
        case 0:
            stt = timer_flag_get(TIMER0, TIMER_INT_FLAG_CMT);
            break;
        case 1:
			stt = timer_flag_get(TIMER1, TIMER_INT_FLAG_CMT);
            break;       
        default:
            return false;
            break;
    }
    if(SET != stt)
    {
        return false;
    }
    else
    {
        return true;
    }
}
