==> captain58/embed_platform/platform/mcu/GD32F30x/hal/src/hal_hwtimer.c <==
#define EXT_HAL_HWTIMER
#include "sys.h"
#include "hal.h"
#define CLK_HAL_HWTIMER                (SystemCoreClock)

static uint8 Hal_Timer_Config(uint8 tmrIdx)
{
//	    ETIM_InitTypeDef init_para;
//	    ETIMx_Type* ETIMx;
//      volatile uint08 EtimNum;
//  
//      EtimNum = ((uint32_t)ETIMx - ETIMER1_BASE)>>5;
    
    uint32 cycle;
    SYS_VAR_CHECK(tmrIdx >= 3);           //判断参数的正确性
    cycle = gul_HwTimerDelay[tmrIdx];    //获取延时间隔
    SYS_VAR_CHECK(cycle > 1000);           //判断参数的正确性

    //信号源参数
//	    init_para.sig_src_para.SIG1SEL = ETIMx_ETxINSEL_SIG1SEL_GROUP1;     /* 内部信号1源选择GROUP1 */
    
    switch(tmrIdx)
    {
        case 0:
        {
              
            TIM_ClockConfigTypeDef sClockSourceConfig = {0};
            TIM_MasterConfigTypeDef sMasterConfig = {0};
            TIM_OC_InitTypeDef sConfigOC = {0};
            TIM_BreakDeadTimeConfigTypeDef sBreakDeadTimeConfig = {0};
            __HAL_RCC_TIM1_CLK_ENABLE();
            /* USER CODE BEGIN TIM1_Init 1 */

            /* USER CODE END TIM1_Init 1 */
            htim1.Instance = TIM1;
            htim1.Init.Prescaler = (uint32_t)(SystemCoreClock/1000000) - 1;
            htim1.Init.CounterMode = TIM_COUNTERMODE_UP;
            htim1.Init.Period = cycle*1000;
            htim1.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
            htim1.Init.RepetitionCounter = 0;
            htim1.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_ENABLE;
            if (HAL_TIM_Base_Init(&htim1) != HAL_OK)
            {
            Error_Handler();
            }
            sClockSourceConfig.ClockSource = TIM_CLOCKSOURCE_INTERNAL;
            if (HAL_TIM_ConfigClockSource(&htim1, &sClockSourceConfig) != HAL_OK)
            {
            Error_Handler();
            }
            if (HAL_TIM_OC_Init(&htim1) != HAL_OK)
            {
            Error_Handler();
            }
            sMasterConfig.MasterOutputTrigger = TIM_TRGO_RESET;
            sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
            if (HAL_TIMEx_MasterConfigSynchronization(&htim1, &sMasterConfig) != HAL_OK)
            {
            Error_Handler();
            }
            sConfigOC.OCMode = TIM_OCMODE_TIMING;
            sConfigOC.Pulse = 0;
            sConfigOC.OCPolarity = TIM_OCPOLARITY_HIGH;
            sConfigOC.OCNPolarity = TIM_OCNPOLARITY_HIGH;
            sConfigOC.OCFastMode = TIM_OCFAST_DISABLE;
            sConfigOC.OCIdleState = TIM_OCIDLESTATE_RESET;
            sConfigOC.OCNIdleState = TIM_OCNIDLESTATE_RESET;
            if (HAL_TIM_OC_ConfigChannel(&htim1, &sConfigOC, TIM_CHANNEL_1) != HAL_OK)
            {
            Error_Handler();
            }
            sBreakDeadTimeConfig.OffStateRunMode = TIM_OSSR_DISABLE;
            sBreakDeadTimeConfig.OffStateIDLEMode = TIM_OSSI_DISABLE;
            sBreakDeadTimeConfig.LockLevel = TIM_LOCKLEVEL_OFF;
            sBreakDeadTimeConfig.DeadTime = 0;
            sBreakDeadTimeConfig.BreakState = TIM_BREAK_DISABLE;
            sBreakDeadTimeConfig.BreakPolarity = TIM_BREAKPOLARITY_HIGH;
            sBreakDeadTimeConfig.AutomaticOutput = TIM_AUTOMATICOUTPUT_DISABLE;
            if (HAL_TIMEx_ConfigBreakDeadTime(&htim1, &sBreakDeadTimeConfig) != HAL_OK)
            {
            Error_Handler();
            }


            
//	                TIM_ClockConfigTypeDef sClockSourceConfig = {0};
//	                TIM_MasterConfigTypeDef sMasterConfig = {0};
//	                TIM_OC_InitTypeDef sConfigOC = {0};
//	                TIM_BreakDeadTimeConfigTypeDef sBreakDeadTimeConfig = {0};
//	                __HAL_RCC_TIM1_CLK_ENABLE();
//	                /* USER CODE BEGIN TIM1_Init 1 */
//	                
//	                /* USER CODE END TIM1_Init 1 */
//	                htim1.Instance = TIM1;
//	                htim1.Init.Prescaler = 2000;(uint32_t)(SystemCoreClock/1000000) - 1;
//	                htim1.Init.CounterMode = TIM_COUNTERMODE_UP;
//	                htim1.Init.Period = 200;//cycle*1000;
//	                htim1.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
//	                htim1.Init.RepetitionCounter = 0;
//	                htim1.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_ENABLE;
//	                if (HAL_TIM_Base_Init(&htim1) != HAL_OK)
//	                {
//	                    Error_Handler();
//	                }
//	
//	                sClockSourceConfig.ClockSource = TIM_CLOCKSOURCE_INTERNAL;
//	                if (HAL_TIM_ConfigClockSource(&htim1, &sClockSourceConfig) != HAL_OK)
//	                {
//	                    Error_Handler();
//	                }
//	   
//	                sMasterConfig.MasterOutputTrigger = TIM_TRGO_RESET;
//	                sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
//	                if (HAL_TIMEx_MasterConfigSynchronization(&htim1, &sMasterConfig) != HAL_OK)
//	                {
//	                  Error_Handler();
//	                }
//	                sConfigOC.OCMode = TIM_OCMODE_TIMING;
//	                sConfigOC.Pulse = 0;
//	                sConfigOC.OCPolarity = TIM_OCPOLARITY_HIGH;
//	                sConfigOC.OCNPolarity = TIM_OCNPOLARITY_HIGH;
//	                sConfigOC.OCFastMode = TIM_OCFAST_DISABLE;
//	                sConfigOC.OCIdleState = TIM_OCIDLESTATE_RESET;
//	                sConfigOC.OCNIdleState = TIM_OCNIDLESTATE_RESET;
//	                if (HAL_TIM_OC_ConfigChannel(&htim1, &sConfigOC, TIM_CHANNEL_1) != HAL_OK)
//	                {
//	                  Error_Handler();
//	                }
//	                sBreakDeadTimeConfig.OffStateRunMode = TIM_OSSR_DISABLE;
//	                sBreakDeadTimeConfig.OffStateIDLEMode = TIM_OSSI_DISABLE;
//	                sBreakDeadTimeConfig.LockLevel = TIM_LOCKLEVEL_OFF;
//	                sBreakDeadTimeConfig.DeadTime = 0;
//	                sBreakDeadTimeConfig.BreakState = TIM_BREAK_DISABLE;
//	                sBreakDeadTimeConfig.BreakPolarity = TIM_BREAKPOLARITY_HIGH;
//	                sBreakDeadTimeConfig.AutomaticOutput = TIM_AUTOMATICOUTPUT_DISABLE;
//	                if (HAL_TIMEx_ConfigBreakDeadTime(&htim1, &sBreakDeadTimeConfig) != HAL_OK)
//	                {
//	                  Error_Handler();
//	                }




                
//	            TIM_MasterConfigTypeDef sMasterConfig = {0};
//	              TIM_OC_InitTypeDef sConfigOC = {0};
//	              TIM_BreakDeadTimeConfigTypeDef sBreakDeadTimeConfig = {0};
//	                __HAL_RCC_TIM1_CLK_ENABLE();
//	              /* USER CODE BEGIN TIM1_Init 1 */
//	            
//	              /* USER CODE END TIM1_Init 1 */
//	              htim1.Instance = TIM1;
//	              htim1.Init.Prescaler = (uint32_t)(SystemCoreClock/1000000) - 1;
//	              htim1.Init.CounterMode = TIM_COUNTERMODE_UP;
//	              htim1.Init.Period = cycle*1000;
//	              htim1.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
//	              htim1.Init.RepetitionCounter = 0;
//	              htim1.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_DISABLE;
//	              if (HAL_TIM_OC_Init(&htim1) != HAL_OK)
//	              {
//	                Error_Handler();
//	              }
//	              sMasterConfig.MasterOutputTrigger = TIM_TRGO_RESET;
//	              sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
//	              if (HAL_TIMEx_MasterConfigSynchronization(&htim1, &sMasterConfig) != HAL_OK)
//	              {
//	                Error_Handler();
//	              }
//	              sConfigOC.OCMode = TIM_OCMODE_TIMING;
//	              sConfigOC.Pulse = 0;
//	              sConfigOC.OCPolarity = TIM_OCPOLARITY_HIGH;
//	              sConfigOC.OCNPolarity = TIM_OCNPOLARITY_HIGH;
//	              sConfigOC.OCFastMode = TIM_OCFAST_DISABLE;
//	              sConfigOC.OCIdleState = TIM_OCIDLESTATE_RESET;
//	              sConfigOC.OCNIdleState = TIM_OCNIDLESTATE_RESET;
//	              if (HAL_TIM_OC_ConfigChannel(&htim1, &sConfigOC, TIM_CHANNEL_1) != HAL_OK)
//	              {
//	                Error_Handler();
//	              }
//	              sBreakDeadTimeConfig.OffStateRunMode = TIM_OSSR_DISABLE;
//	              sBreakDeadTimeConfig.OffStateIDLEMode = TIM_OSSI_DISABLE;
//	              sBreakDeadTimeConfig.LockLevel = TIM_LOCKLEVEL_OFF;
//	              sBreakDeadTimeConfig.DeadTime = 0;
//	              sBreakDeadTimeConfig.BreakState = TIM_BREAK_DISABLE;
//	              sBreakDeadTimeConfig.BreakPolarity = TIM_BREAKPOLARITY_HIGH;
//	              sBreakDeadTimeConfig.AutomaticOutput = TIM_AUTOMATICOUTPUT_DISABLE;
//	              if (HAL_TIMEx_ConfigBreakDeadTime(&htim1, &sBreakDeadTimeConfig) != HAL_OK)
//	              {
//	                Error_Handler();
//	              }


            }
            break;
        case 1:
            {
                //信号源参数
                TIM_MasterConfigTypeDef sMasterConfig = {0};
                TIM_OC_InitTypeDef sConfigOC = {0};
                __HAL_RCC_TIM3_CLK_ENABLE();

                /* USER CODE BEGIN TIM3_Init 1 */

                /* USER CODE END TIM3_Init 1 */
                htim3.Instance = TIM3;
                htim3.Init.Prescaler = (uint32_t)(SystemCoreClock/1000000) - 1;
                htim3.Init.CounterMode = TIM_COUNTERMODE_UP;
                htim3.Init.Period = cycle*1000;
                htim3.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
                htim3.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_DISABLE;
                if (HAL_TIM_OC_Init(&htim3) != HAL_OK)
                {
                    Error_Handler();
                }
                sMasterConfig.MasterOutputTrigger = TIM_TRGO_RESET;
                sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
                if (HAL_TIMEx_MasterConfigSynchronization(&htim3, &sMasterConfig) != HAL_OK)
                {
                    Error_Handler();
                }
                sConfigOC.OCMode = TIM_OCMODE_TIMING;
                sConfigOC.Pulse = 0;
                sConfigOC.OCPolarity = TIM_OCPOLARITY_HIGH;
                sConfigOC.OCFastMode = TIM_OCFAST_DISABLE;
                if (HAL_TIM_OC_ConfigChannel(&htim3, &sConfigOC, TIM_CHANNEL_1) != HAL_OK)
                {
                    Error_Handler();
                }      
                /* TIM3 interrupt Init */
            }
            break;

       
        
        default:
            break;
    }

    SYS_OK();
}

uint8 SysTimer_DlyStart(uint8 tmrIdx)
{

    switch(tmrIdx)
    {
    case 0:
        //信号源参数
//	        ETIMx = (ETIMx_Type*)ETIM2;
//	        NVIC_EnableIRQ(ETIM2_IRQn);
        HAL_TIM_Base_Start_IT(&htim1);
        HAL_NVIC_SetPriority(TIM1_BRK_UP_TRG_COM_IRQn, 0, 0);
        HAL_NVIC_EnableIRQ(TIM1_BRK_UP_TRG_COM_IRQn);
//	        HAL_NVIC_SetPriority(TIM1_CC_IRQn, 0, 0);
//	        HAL_NVIC_EnableIRQ(TIM1_CC_IRQn);

        break;
    case 1:
        //信号源参数
//	        ETIMx = (ETIMx_Type*)ETIM2;
//	        NVIC_EnableIRQ(ETIM2_IRQn);
        HAL_TIM_Base_Start_IT(&htim3);
        HAL_NVIC_SetPriority(TIM3_IRQn, 0, 0);
        HAL_NVIC_EnableIRQ(TIM3_IRQn);

        break;        
    default:
   
        break;
    }
	
	SYS_OK();  
}

uint8 SysTimer_DlyStop(uint8 tmrIdx)
{
    SYS_VAR_CHECK(tmrIdx >= 4);           //判断参数的正确性
    switch(tmrIdx)                      //根据号码进行散转
    {
        case 0:                         //关闭中断功能
//	            HAL_TIM_Base_Stop_IT(&htim1);
//	            HAL_NVIC_DisableIRQ(TIM1_BRK_UP_TRG_COM_IRQn);
//	            HAL_NVIC_DisableIRQ(TIM1_CC_IRQn);

            break;
        case 1:                         //关闭中断功能
            HAL_TIM_Base_Stop_IT(&htim3);
            HAL_NVIC_DisableIRQ(TIM3_IRQn);

            break;

        default:
            return SYS_ERR_FT;
//	            Chip_TIMER_MatchDisableInt(LPC_HWTIMER, 3);
//	            Chip_TIMER_StopOnMatchDisable(LPC_HWTIMER, 3);
            break;
    }
    SYS_OK();                            //返回停止成功
}

bool SysTimer_GetStatus(uint8 tmrIdx)
{
    SYS_VAR_CHECK(tmrIdx >= 4);              //判断参数的正确性
//	    ETIMx_Type* ETIMx;
    uint8_t stt = 0;
    switch(tmrIdx)
    {
        case 0:
            stt = HAL_TIM_Base_GetState(&htim1);
            break;
        case 1:
            stt = HAL_TIM_Base_GetState(&htim3);
            break;       
        default:
            return false;
            break;
    }
    if(HAL_TIM_STATE_BUSY != stt)
    {
        return false;
    }
    else
    {
        return true;
    }
}
